fix: Map functions to http server
